Landing page-responsive design

--- a/5Exercise Responsive-Web-Design/05_Responsive-media-boxes/index.html
+++ b/5Exercise Responsive-Web-Design/05_Responsive-media-boxes/index.html
@@ -10,7 +10,7 @@
     <section class="card">
         <div class="picture">
           <img src="picture1.jpg" alt="sunset">
-              
+        </div>
         <div>
             <h3>Card Title</h3>
             <p>Short description of what this is all about - crafted to make people interested</p>
