--- a/exam prep/01. Financial Services_Ресурси/index.html
+++ b/exam prep/01. Financial Services_Ресурси/index.html
@@ -17,7 +17,7 @@
         <div class="services">
             <article>
                 <div class="media">
-                    <img src="./images/picture1.jpg">
+                    <img src="images/picture1.jpg">
                 </div>
                 <div class="content">
                     <h3>Digital Currency</h3>
@@ -29,7 +29,7 @@
                 
             <article>
                 <div class="media">
-                    <img src="./images/picture2.jpg">
+                    <img src="images/picture2.jpg">
                 </div>
                 <div class="content">
                     <h3>Market Analysis</h3>
@@ -41,7 +41,7 @@
                     
             <article>
                 <div class="media">
-                    <img src="./images/picture3.jpg">
+                    <img src="images/picture3.jpg">
                 </div>
                 <div class="content">
                     <h3>Historical Data</h3>
